--- a/Angular/taskify-frontend/src/app/profile/profile.component.css
+++ b/Angular/taskify-frontend/src/app/profile/profile.component.css
@@ -1,9 +1,11 @@
+/* Removes margins, padding, and applies box-sizing to all elements */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
+/* Global body style */
 body {
     font-family: Arial, sans-serif;
     background-color: #f5f5f5;
@@ -12,6 +14,7 @@ body {
     align-items: center;
 }
 
+/* Header styles */
 header {
     width: 100%;
     padding: 20px;
@@ -22,6 +25,7 @@ header {
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
 }
 
+/* Logo container and styling */
 .logo-container {
     display: flex;
     align-items: center;
@@ -33,11 +37,13 @@ header {
     margin-right: 10px;
 }
 
+/* Main title style */
 h1 {
     font-size: 24px;
     color: #333;
 }
 
+/* Navigation button */
 .nav-button {
     background-color: #00003e;
     color: white;
@@ -47,11 +53,12 @@ h1 {
     border-radius: 5px;
 }
 
+/* Navigation button hover style */
 .nav-button:hover {
     background-color: #00008a;
 }
 
-/* Centrer le contenu principal */
+/* Center the main content */
 main {
     display: flex;
     justify-content: center;
@@ -60,6 +67,7 @@ main {
     width: 100%;
 }
 
+/* Profile container style */
 .profile-container {
     text-align: center;
     padding: 20px;
@@ -70,6 +78,7 @@ main {
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
+/* Profile button */
 .profile-button {
     font-size: 18px;
     padding: 10px 90px;
@@ -80,6 +89,7 @@ main {
     cursor: pointer;
 }
 
+/* Action buttons container */
 .action-buttons {
     display: flex;
     flex-direction: column;
@@ -87,6 +97,7 @@ main {
     margin-bottom: 40px;
 }
 
+/* Password change and account deletion buttons */
 .change-password-button,
 .delete-account-button {
     font-size: 16px;
@@ -97,11 +108,13 @@ main {
     border-radius: 5px;
 }
 
+/* Hover effect for password change and account deletion buttons */
 .change-password-button:hover,
 .delete-account-button:hover {
     background-color: #f0f0f0;
 }
 
+/* Logout button */
 .logout-button {
     padding: 10px 15px;
     font-size: 16px;
@@ -111,6 +124,7 @@ main {
     border-radius: 5px;
 }
 
+/* Hover effect for logout button */
 .logout-button:hover {
     background-color: #ffcccc;
 }
